2008-11-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 447985 - Exception
	display tip is inaccurate for derived (custom) exceptions'.

2008-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpAmbience.cs: Don't try to prepend a return type to
	finalisers.

2008-11-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/CSharpAmbience.cs: Format finalisers correctly.

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: fixed folding region bug.

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs: worked on c# ambience.

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Gui/MemberCompletionData.cs:
	* Gui/CSharpTextEditorCompletion.cs: worked on "Bug 444547 - Invalid
	options shown when completing 'new' operator".

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed 'Bug 444911 - Refactor options not
	shown'.

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpAmbience.cs:
	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 444463 - Function
	completion lacks 'out' keywords in params'.

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs: fixed 'Bug 446177 - Encapsulate field
	operation renames incorrect variable names in external files'.

2008-11-19  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs: fixed 'Bug 445774 - Renaming class badly
	broken; results in many errors'.

2008-11-18  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 444112 - Generic
	parameters missing in code completion'.

2008-11-18  Mike Krüger  <mkrueger@novell.com>

	* Parser/CodeGenerator.cs: fixed 'Bug 355948 - Rename refactoring does
	not rename within #ifdef blocks'.

2008-11-17  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs: Don't add the codepage:utf8 option if
	the user selected another codepage. Fix by Ernesto Carrea.
